--- a/extension/media/main.css
+++ b/extension/media/main.css
@@ -54,3 +54,14 @@ body {
     cursor: pointer;
     width: 30px;
 }
+
+.message pre {
+    background-color: var(--vscode-interactive-result-editor-background-color);
+    border-radius: 4px;
+    border: 1px solid var(--vscode-input-border, transparent);
+    overflow-x: auto;
+}
+
+.message code {
+    background-color: transparent;
+}
